# gocator

./: CMakeLists.txt  README.md
gocator/: CMakeLists.txt  package.xml
gocator_bridge/: CMakeLists.txt  package.xml
gocator_bridge/Data/GO_SDK/Gocator/: GoSdk-2003.sln  GoSdk-2005.sln  GoSdk-2008.sln  GoSdk-2010.sln  GoSdk-2012.sln  GoSdk-2013.sln  GoSdk-2015.sln  GoSdk-Gnu.mk
gocator_bridge/Data/GO_SDK/Gocator/GoExamples/: GoSystemExample-2003.vcproj  GoSystemExample-2005.vcproj  GoSystemExample-2008.vcproj  GoSystemExample-2010.vcxproj  GoSystemExample-2010.vcxproj.filters  GoSystemExample-2012.vcxproj  GoSystemExample-2013.vcxproj  GoSystemExample-2015.vcxproj  GoSystemExample-Gnu.mk
gocator_bridge/Data/GO_SDK/Gocator/GoExamples/GoSystemExample/: GoSystemExample.c
gocator_bridge/Data/GO_SDK/Gocator/GoSdk/: GoSdk-2003.vcproj  GoSdk-2005.vcproj  GoSdk-2008.vcproj  GoSdk-2010.vcxproj  GoSdk-2012.vcxproj  GoSdk-2013.vcxproj  GoSdk-2013.vcxproj.filters  GoSdk-2015.vcxproj  GoSdk-Gnu.mk
gocator_bridge/Data/GO_SDK/Gocator/GoSdk/GoSdk/: GoMaterial.c  GoMaterial.h  GoPartMatching.c  GoSdk.h  GoSdkDef.x.h  GoSdkLib.c  GoSensor.h  GoSetup.x.h  GoSystem.h  GoUtils.x.h
gocator_bridge/Data/GO_SDK/Platform/kApi/: kApi-2003.vcproj  kApi-2005.vcproj  kApi-2008.vcproj  kApi-2010.vcxproj  kApi-2010.vcxproj.filters  kApi-2012.vcxproj  kApi-2013.vcxproj  kApi-2015.vcxproj  kApi-Gnu.mk
gocator_bridge/Data/GO_SDK/Platform/kApi/kApi/: kAlloc.c  kApiCfg.h  kApiDef.c
gocator_bridge/Data/GO_SDK/doc/GoSdk/Gocator_1x00/: GoSdk.html
gocator_bridge/Data/GO_SDK/doc/kApi/html/: annotated.html  classes.html  classk_alloc-members.html  classk_alloc.html  classk_alloc__inherit__graph.map  classk_alloc__inherit__graph.md5  classk_alloc_a0b758fce045e2a9ec602f9edcb7cd34b.html  classk_alloc_a476d7b27ba59e9dccf389212cffb5a68.html  classk_alloc_a64de4aad2f82750d4f8c88f084c87840.html  classk_alloc_a6da8680182067698a5e75f5b32f3134c.html  classk_alloc_aa4f6e740f29ad763276b175d88f2d4b5.html  classk_alloc_abcfa8353a2eac6cdef8a48253e9fe391.html  classk_alloc_ad010c54b81ecf7be6857e5420cd1a892.html  classk_api_lib-members.html  classk_api_lib.html  classk_api_lib_a214823a57184b7905270f157904ddee8.html  classk_api_lib_a2c2fde73dcd41502a9e24ffa60caa578.html  classk_api_lib_a3cd48a01dad290fcc1ab082a1fd802be.html  classk_api_lib_a40131293fa4f71eb7311f782952701ee.html  classk_api_lib_a741eaba70d9fd2365fa8e85c4207cbc7.html  classk_api_lib_a7a7a725518178e9abcec826ae936decf.html  classk_api_lib_ac5649aa7990518159f67ca419f6a87d2.html  classk_api_lib_affe3265bc4df478ee6220de140b50474.html  classk_array1-members.html  classk_array1.html  classk_array1__inherit__graph.map  classk_array1__inherit__graph.md5  classk_array1_a0ea249f418c33e5d8326c5836e6a0c51.html  classk_array1_a1829ad79d2b5bb172215eb9524d8b122.html  classk_array1_a23253e9b5db3a70cc43b87ddafed974e.html  classk_array1_a25452953b464ee45f5b131d8eb7cdee1.html  classk_array1_a441a06c63c97af0c015d98202e78416f.html  classk_array1_a5acc68c6bb6d7406ecd84368268175a5.html  classk_array1_a5fd57d863e0b97dee929d12e38d102bf.html  classk_array1_a81566719dd78f6c265e32657e2711493.html  classk_array1_a84e01f53e8fcce0dd5319e2f475b562a.html  classk_array1_a8f0cab9f9e76ff09390490bbbbdc617d.html  classk_array1_a966e1a31411e8619d8cb717886957bf2.html  classk_array1_aa0b3f0f59fa6d5e02b4e382baa29fbc1.html  classk_array1_abb54216b23592a9f38281852d8d477be.html  (+1546 more)
gocator_bridge/Data/GO_SDK/lib/win32/: GoSdk.lib  kApi.lib
gocator_bridge/Data/GO_SDK/lib/win32d/: GoSdk.lib  kApi.lib
gocator_bridge/Data/GO_SDK/lib/win64/: GoSdk.lib  kApi.lib
gocator_bridge/Data/GO_SDK/lib/win64d/: GoSdk.lib  kApi.lib
gocator_bridge/include/gocator_bridge/: Visualizer.h  maxon.h
gocator_bridge/include/gocator_bridge/GoSdk/: license.txt
gocator_bridge/include/gocator_bridge/GoSdk/GoSdk/: GoMaterial.x.h  GoMultiplexBank.c  GoPartDetection.c  GoSdkDef.c  GoSdkDef.h  GoSdkLib.x.h  GoSensor.c  GoSensor.x.h  GoSetup.c  GoSetup.h  GoSurfaceGeneration.c  GoSystem.c  GoUtils.c
gocator_bridge/include/gocator_bridge/GoSdk/GoSdk/Internal/: GoControl.x.h  GoDiscovery.h
gocator_bridge/include/gocator_bridge/GoSdk/GoSdk/Messages/: GoDataTypes.x.h  GoDiscoveryExtInfo.c  GoDiscoveryExtInfo.h
gocator_bridge/include/gocator_bridge/GoSdk/GoSdk/Outputs/: GoAnalog.c  GoDigital.c  GoEthernet.h  GoEthernet.x.h  GoSerial.c
gocator_bridge/include/gocator_bridge/GoSdk/GoSdk/Tools/: GoExtParam.c  GoExtParam.x.h  GoExtTool.x.h  GoMeasurement.c  GoMeasurements.x.h  GoProfileTools.c  GoProfileTools.h  GoProfileTools.x.h  GoSurfaceTools.c  GoSurfaceTools.h  GoTools.h  GoTools.x.h
gocator_bridge/include/gocator_bridge/kApi/: license.txt
gocator_bridge/include/gocator_bridge/kApi/kApi/: kApiDef.h  kApiDef.x.h  kApiLib.c  kApiLib.x.h  kApiVersion.h  kAssembly.c  kType.c
gocator_bridge/include/gocator_bridge/kApi/kApi/Data/: kImage.c  kImage.x.h  kXml.c
gocator_bridge/include/gocator_bridge/kApi/kApi/Io/: kFile.x.h  kHttpServer.x.h  kHttpServerChannel.c  kNetwork.c  kSerializer.h  kSerializer.x.h  kSocket.c  kSocket.h  kSocket.x.h  kTcpClient.c  kTcpClient.x.h
gocator_bridge/include/gocator_bridge/kApi/kApi/Threads/: kAtomic.x.h  kPeriodic.h  (+2 more)
gocator_bridge/lib/: libftd2xx.so.1.1.12
gocator_bridge/src/: gocator_bridge.cpp
gocator_range/: CMakeLists.txt  package.xml
gocator_range/src/: gocator_range.cpp
gocator_surface/: CMakeLists.txt  package.xml
gocator_surface/include/gocator_surface/: surface.h
gocator_surface/launch/: surface.launch
gocator_surface/src/: gocator_surface.cpp  gocator_surfaceCB.cpp
gocator_video/: CMakeLists.txt  package.xml
gocator_video/cmake_modules/: FindGLFW3.cmake
gocator_video/include/gocator_profile/: viewer.h
gocator_video/launch/: video.launch
gocator_video/maxon_driver/: CMakeLists.txt  package.xml
gocator_video/src/: gocator_video.cpp  video_segmenter.cpp
scripts/: CMakeLists.txt  package.xml
scripts/launch/: epos.launch
scripts/src/: HelloEposCmd.cpp
setupmeasurement/: CMakeLists.txt  package.xml
setupmeasurement/src/: setupmeasurement.cpp
(+2801 files in other folders)
