<?xml version="1.0"?>
<package>
  <name>gocator_video</name>
 <version>0.0.0</version>
  <description>The gocator_bridge package</description>
  <maintainer email="ogunmolu@amazon.com">ogunmolu</maintainer>
  <license>MIT</license>
  <url type="website">http://ecs.utdallas.edu/~olalekan.ogunmolu</url> 
  <author email="ogunmolu@amazon.com">Olalekan Ogunmolu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>maxon_driver</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>gocator_bridge</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libpcl-all</run_depend>

<!--
  <exec_depend>libEposCmd.so.5.0.1.0</exec_depend>
  <exec_depend>libftd2xx.so.1.1.12</exec_depend>
-->
  <export>
  </export>
</package>
